amcart-istio/templates/istio-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
 name: root-gateway
 namespace: istio-ingress
spec:
 selector:
   istio: ingressgateway
 servers:
  - port:
     number: 80
     name: http
     protocol: HTTP
    hosts:
      - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: amcart-server
   namespace: amcart
spec:
   hosts:
   - '*'
   gateways:
   - istio-ingress/root-gateway
   http:
   - match:
     - uri:
         prefix: /api/v1/search
     route:
     - destination:
         host: search-api-svc.amcart.svc.cluster.local
         port:
           number: 8080
        retries:
          attempts: 3                
          perTryTimeout: 100s          
          retryOn: 5xx, gateway-error, connect-failure,refused-stream
        corsPolicy:
          allowOrigins:
          - exact: https://mcart.azurefd.net
          - exact: https://yellow-grass-02e688510.6.azurestaticapps.net
          allowMethods:
          - POST
          - GET
          - OPTIONS
          allowHeaders:
          - content-type
          - authorization
          - Access-Control-Allow-Origin
          - Access-Control-Allow-Methods
          - Access-Control-Allow-Headers
          - x-azure-ref
          maxAge: 24h
          allowCredentials: false
   - match:
     - uri:
         prefix: /api/v1/products
     route:
     - destination:
         host: product-api-svc.amcart.svc.cluster.local
         port:
           number: 8080
        retries:
          attempts: 3                
          perTryTimeout: 100s          
          retryOn: 5xx, gateway-error, connect-failure,refused-stream
        corsPolicy:
          allowOrigins:
          - exact: https://mcart.azurefd.net
          - exact: https://yellow-grass-02e688510.6.azurestaticapps.net
          allowMethods:
          - POST
          - GET
          - OPTIONS
          allowHeaders:
          - content-type
          - authorization
          - Access-Control-Allow-Origin
          - Access-Control-Allow-Methods
          - Access-Control-Allow-Headers
          - x-azure-ref
          maxAge: 24h
          allowCredentials: false
